--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,6 +1,8 @@
 .Home {
     background-color: white;
     padding: 20px;
+    height: 75vh;
+    font-family: 'Georgia', serif;
 }
 
 .Content{
